--- a/advent-of-code.cabal
+++ b/advent-of-code.cabal
@@ -31,12 +31,13 @@ library
     exposed-modules:  MyLib
 
     -- Modules included in this library but not exported.
-    other-modules: DayOne, DayTwo, DayThree, DayFour
+    other-modules: DayOne, DayTwo, DayThree, DayFour, DayFive
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base ^>=4.14.3.0,
-                      text >=1.2.4.1
+                      text >=1.2.4.1,
+                      containers >= 0.6.5.1
     hs-source-dirs:   src
     default-language: Haskell2010
 
