--- a/advent-of-code.cabal
+++ b/advent-of-code.cabal
@@ -37,7 +37,8 @@ library
     -- other-extensions:
     build-depends:    base ^>=4.14.3.0,
                       text >=1.2.4.1,
-                      containers >= 0.6.5.1
+                      containers >= 0.6.5.1,
+                      ansi-terminal >= 0.11.1,
     hs-source-dirs:   src
     default-language: Haskell2010
 
