--- a/advent-of-code.cabal
+++ b/advent-of-code.cabal
@@ -31,7 +31,7 @@ library
     exposed-modules:  MyLib
 
     -- Modules included in this library but not exported.
-    other-modules: DayOne, DayTwo, DayThree, DayFour, DayFive, DaySix, DaySeven, DayEight, DayNine
+    other-modules: DayOne, DayTwo, DayThree, DayFour, DayFive, DaySix, DaySeven, DayEight, DayNine, DayTen
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
