--- a/advent-of-code.cabal
+++ b/advent-of-code.cabal
@@ -40,6 +40,7 @@ library
                       containers >= 0.6.5.1,
                       ansi-terminal >= 0.11.1,
                       parsec >= 3.1.15.0,
+                      pqueue >= 1.4.1.4,
     hs-source-dirs:   src
     default-language: Haskell2010
 
