--- a/advent-of-code.cabal
+++ b/advent-of-code.cabal
@@ -41,6 +41,7 @@ library
                       ansi-terminal >= 0.11.1,
                       parsec >= 3.1.15.0,
                       pqueue >= 1.4.1.4,
+                      HUnit >= 1.6.2.0
     hs-source-dirs:   src
     default-language: Haskell2010
 
